# ROS2_Learn

./: .gitignore  README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Person.msg
src/custom_interfaces/srv/: GetPerson.srv
src/py_parameters/: package.xml  setup.py
src/py_parameters/py_parameters/: parameter_node.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher.py  subscriber.py
src/py_srv/: package.xml  setup.py
src/py_srv/py_srv/: client.py  server.py
